WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183212
[GStreamer] text samples no longer processed
https://bugs.webkit.org/show_bug.cgi?id=183212
Summary
[GStreamer] text samples no longer processed
Philippe Normand
Reported
2018-02-28 06:27:45 PST
Inband subtitles are no longer rendered. Will attach a patch.
Attachments
Patch
(2.08 KB, patch)
2018-02-28 06:30 PST
,
Philippe Normand
calvaris
: review+
calvaris
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2018-02-28 06:30:23 PST
Created
attachment 334742
[details]
Patch
Xabier Rodríguez Calvar
Comment 2
2018-02-28 23:51:56 PST
Comment on
attachment 334742
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=334742&action=review
> Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:986 > + for (auto track : m_textTracks.values()) {
Nit: you better do auto& instead.
Philippe Normand
Comment 3
2018-03-01 01:30:14 PST
Committed
r229127
: <
https://trac.webkit.org/changeset/229127
>
Radar WebKit Bug Importer
Comment 4
2018-03-01 01:31:39 PST
<
rdar://problem/38019193
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug