[GStreamer] text samples no longer processed https://bugs.webkit.org/show_bug.cgi?id=183212

Reviewed by Xabier Rodriguez-Calvar.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::newTextSample): Refer to
track stream ID instead of (potentially) manually generated track
ID stored as hashmap keys.

Canonical link: https://commits.webkit.org/198918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229127 268f45cc-cd09-0410-ab3c-d52691b4dbfc